Accent Grave / Tilde key on Apple macOS not working #109630

Closed
opened 2023-07-03 02:02:22 +02:00 by Dennis Dornia · 8 comments

System Information
Operating system: macOS 13.4.1
Graphics card: Apple M1 Max 32 cores

Blender Version
Broken: 3.6 LTS (default, no extra addons)
Worked: -

Short description of error
Grave Accent / Tilde Action cannot be used on macOS with a US International MacBook keyboard and is also not working with external keyboards. Doesn't even work with modifier keys. The function is needed for users without a Num Pad.

Exact steps for others to reproduce the error

  • Go to Preferences > Keymap
  • Using the Search Field for Key-Binding accepts Accent Grave (`) as input from the Mac Keyboard
  • try to set again the key or use Accent Grave / Tilde to open the Navigate Pie Menu in the 3D View for example

it won't open the Pie Menu.

**System Information** Operating system: macOS 13.4.1 Graphics card: Apple M1 Max 32 cores **Blender Version** Broken: 3.6 LTS (default, no extra addons) Worked: - **Short description of error** Grave Accent / Tilde Action cannot be used on macOS with a US International MacBook keyboard and is also not working with external keyboards. Doesn't even work with modifier keys. The function is needed for users without a Num Pad. **Exact steps for others to reproduce the error** - Go to Preferences > Keymap - Using the Search Field for Key-Binding accepts Accent Grave (`) as input from the Mac Keyboard - try to set again the key or use Accent Grave / Tilde to open the Navigate Pie Menu in the 3D View for example it won't open the Pie Menu.
Dennis Dornia added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-03 02:02:23 +02:00

Hi, thanks for the report. I suspect keyboard language and layout might be affecting this.
Do you've non-english layout selected?
Could be related to: #51283, #80795

Are these key presses recognized outside of blender (ex: text editor)?

Hi, thanks for the report. I suspect keyboard language and layout might be affecting this. Do you've non-english layout selected? Could be related to: #51283, #80795 Are these key presses recognized outside of blender (ex: text editor)?
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-07-03 04:19:57 +02:00

I use the "US International - PC" layout. Works fine outside of blender. Works fine even in the script editor and if i set the Accent Grave in the key-bindings.

If i search the keybindings for i do find 3D View - View (wm.call_menu_pie)(VIEW3D_MT_view_pie) It is set to and click drag and i can reassign the accent grave key using my keyboard. But it won't work in the 3D View.
If i set the keybinding to e.g. "y" and click drag it works.

I use the "US International - PC" layout. Works fine outside of blender. Works fine even in the script editor and if i set the Accent Grave in the key-bindings. If i search the keybindings for ` i do find 3D View - View (wm.call_menu_pie)(VIEW3D_MT_view_pie) It is set to ` and click drag and i can reassign the accent grave key using my keyboard. But it won't work in the 3D View. If i set the keybinding to e.g. "y" and click drag it works.

@ChAoS_O Could you try creating a new user account on your machine and only fresh install Blender in there, to see if the default macOS and Blender its own settings will give you access to the Accent Grave / Tilde key? For I can use it on an MacBook Air M1 model 2020 running macOS Ventura 13.4.1, giving me the Pie Menu you are missing. International keyboard here (vertical Enter-key) in the MBA and on an external keyboard as well.

@ChAoS_O Could you try creating a new user account on your machine and only fresh install Blender in there, to see if the default macOS and Blender its own settings will give you access to the Accent Grave / Tilde key? For I can use it on an MacBook Air M1 model 2020 running macOS Ventura 13.4.1, giving me the Pie Menu you are missing. International keyboard here (vertical Enter-key) in the MBA and on an external keyboard as well.

@ChAoS_O , thanks for the update. Does view pie menu open in other editors? (ex: timeline)

Could you try creating a new user account on your machine... to see if the default macOS and Blender its own settings

Instead, either delete the config folder or do factory reset: File > Defaults > Load Factory Settings :)

@ChAoS_O , thanks for the update. Does view pie menu open in other editors? (ex: timeline) > Could you try creating a new user account on your machine... to see if the default macOS and Blender its own settings Instead, either delete the config folder or do factory reset: `File > Defaults > Load Factory Settings` :)

Tried it with default settings. Same problem. After trying default - i set the key again in the bindings, it recognizes the key when binding, but still not working for the pie menu (tested with 3d view and timeline).

Tried it with default settings. Same problem. After trying default - i set the key again in the bindings, it recognizes the key when binding, but still not working for the pie menu (tested with 3d view and timeline).

@mano-wii , can you verify this on Mac?

@mano-wii , can you verify this on Mac?
Pratik Borhade added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2023-07-10 08:20:46 +02:00

In fact there seems to be a bug here.

I analyzed the code and at first wondered why kVK_ANSI_Grave is commented out here:
f1e4903854/intern/ghost/intern/GHOST_SystemCocoa.mm (L259)

But that's not necessarily the problem. It is commented out since the Cocoa system was implemented in Ghost: 3f3c2d0204

And the UCKeyTranslate function is in charge of identifying these keys.

But for some strange reason, UCKeyTranslate is not identifying the key when pressing it. It only identifies when releasing it.

I have the impression that it worked before. Did some driver update break it? Needs investigation...

In fact there seems to be a bug here. I analyzed the code and at first wondered why `kVK_ANSI_Grave` is commented out here: https://projects.blender.org/blender/blender/src/commit/f1e49038543cf75766f4a220f62cdc6cdbc0e27d/intern/ghost/intern/GHOST_SystemCocoa.mm#L259 But that's not necessarily the problem. It is commented out since the Cocoa system was implemented in Ghost: 3f3c2d0204 And the `UCKeyTranslate` function is in charge of identifying these keys. But for some strange reason, `UCKeyTranslate` is not identifying the key when pressing it. It only identifies when releasing it. I have the impression that it worked before. Did some driver update break it? Needs investigation...
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-12 20:06:53 +02:00

@mano-wii hi, can we backport your fix to LTS? :)

@mano-wii hi, can we backport your fix to LTS? :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109630
There is no content yet.